@@ -1,7 +1,11 @@
 package com.veltro.inventory.controller;
 
 import com.veltro.inventory.dto.scanner.ProductSuggestionResponse;
+import com.veltro.inventory.model.ProductEntity;
+import com.veltro.inventory.security.TenantProvider;
+import com.veltro.inventory.service.BatchIndexingService;
 import com.veltro.inventory.service.ProductRecognitionService;
+import com.veltro.inventory.service.SemanticSearchProvider;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.MediaType;
@@ -12,28 +16,16 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
-import org.springframework.http.HttpStatus;
-import com.veltro.inventory.service.BatchIndexingService;
-import com.veltro.inventory.infrastructure.ai.ClipInferenceService;
-import java.awt.image.BufferedImage;
-import javax.imageio.ImageIO;
-import java.io.InputStream;
-import java.util.Optional;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
 
 /**
- * REST controller for AI-powered product scanning (B3-01).
- *
- * <p>Provides endpoints for:
- * <ul>
- *   <li>AI vision scanning - analyze product images to identify or suggest products</li>
- *   <li>Scanner status - check availability of scanning strategies</li>
- * </ul>
- *
- * <p>Note: Traditional barcode scanning is handled by the frontend using device cameras.
- * The decoded barcode is then looked up via {@code GET /api/v1/products/barcode/{barcode}}.
+ * REST controller for AI-powered product scanning.
  */
 @Slf4j
 @RestController
@@ -41,71 +33,41 @@ import java.util.Map;
 @RequiredArgsConstructor
 public class ScannerController {
 
+    private static final long MAX_IMAGE_BYTES = 5L * 1024L * 1024L;
+    private static final Set<String> ALLOWED_IMAGE_MIME_TYPES = Set.of(
+            MediaType.IMAGE_JPEG_VALUE,
+            MediaType.IMAGE_PNG_VALUE,
+            "image/webp"
+    );
+
     private final ProductRecognitionService scannerService;
     private final BatchIndexingService batchIndexingService;
-    private final ClipInferenceService clipInferenceService;
-    private final com.veltro.inventory.repository.ProductRepository productRepository;
+    private final SemanticSearchProvider semanticSearchProvider;
+    private final TenantProvider tenantProvider;
 
-    /**
-     * Analyzes a product image using AI vision.
-     *
-     * <p>POST /api/v1/scanner/ai
-     *
-     * <p>Accepts an image file and returns product suggestions based on AI analysis.
-     * Returns 501 if AI vision is not configured.
-     *
-     * @param image the product image file (JPEG, PNG, WebP)
-     * @return product suggestions with confidence scores
-     */
     @PostMapping(value = "/ai", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
     @PreAuthorize("hasAnyRole('ADMIN', 'CASHIER', 'WAREHOUSE')")
-    public ResponseEntity<ProductSuggestionResponse> scanWithAi(
-            @RequestParam("image") MultipartFile image
-    ) {
-        log.info("AI scan request received: {} ({} bytes)",
-                image.getOriginalFilename(), image.getSize());
-
+    public ResponseEntity<ProductSuggestionResponse> scanWithAi(@RequestParam("image") MultipartFile image) {
+        log.info("AI scan request received: {} ({} bytes)", image.getOriginalFilename(), image.getSize());
         if (image.isEmpty()) {
             return ResponseEntity.badRequest().build();
         }
-
         ProductSuggestionResponse response = scannerService.processImage(image);
         return ResponseEntity.ok(response);
     }
 
-    /**
-     * Gets the status of all scanner strategies.
-     *
-     * <p>GET /api/v1/scanner/status
-     *
-     * @return map of strategy type to availability status
-     */
     @GetMapping("/status")
     @PreAuthorize("hasAnyRole('ADMIN', 'CASHIER', 'WAREHOUSE')")
     public ResponseEntity<Map<String, Boolean>> getStatus() {
-        Map<String, Boolean> status = scannerService.getStrategyStatus();
-        return ResponseEntity.ok(status);
+        return ResponseEntity.ok(scannerService.getStrategyStatus());
     }
 
-    /**
-     * Checks if AI vision is available.
-     *
-     * <p>GET /api/v1/scanner/ai/available
-     *
-     * @return true if AI vision is configured and ready
-     */
     @GetMapping("/ai/available")
     @PreAuthorize("hasAnyRole('ADMIN', 'CASHIER', 'WAREHOUSE')")
     public ResponseEntity<Map<String, Boolean>> isAiAvailable() {
-        boolean available = scannerService.isAiVisionAvailable();
-        return ResponseEntity.ok(Map.of("available", available));
+        return ResponseEntity.ok(Map.of("available", scannerService.isAiVisionAvailable()));
     }
 
-    /**
-     * Batch reindexes all products for semantic search.
-     *
-     * <p>POST /api/v1/scanner/reindex
-     */
     @PostMapping("/reindex")
     @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<Map<String, String>> reindexAll() {
@@ -113,80 +75,70 @@ public class ScannerController {
         return ResponseEntity.ok(Map.of("message", "Batch indexing started asynchronously."));
     }
 
-    /**
-     * Gets the status of the CLIP inference model.
-     *
-     * <p>GET /api/v1/scanner/model-status
-     */
     @GetMapping("/model-status")
     @PreAuthorize("hasAnyRole('ADMIN', 'CASHIER', 'WAREHOUSE')")
     public ResponseEntity<Map<String, Object>> getModelStatus() {
         return ResponseEntity.ok(Map.of(
-            "loaded", clipInferenceService.isModelLoaded(),
-            "version", clipInferenceService.getModelVersion()
+                "loaded", semanticSearchProvider.isModelLoaded(),
+                "version", semanticSearchProvider.getModelVersion()
         ));
     }
 
-    /**
-     * Performs a semantic search using an image.
-     *
-     * <p>POST /api/v1/scanner/semantic
-     */
     @PostMapping(value = "/detect", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
     @PreAuthorize("hasAnyRole('ADMIN', 'CASHIER', 'WAREHOUSE')")
-    public ResponseEntity<java.util.List<Map<String, Object>>> detectSearch(
-            @RequestParam("image") MultipartFile image
-    ) {
-        if (!clipInferenceService.isModelLoaded()) {
-            return ResponseEntity.ok(java.util.List.of());
+    public ResponseEntity<?> detectSearch(@RequestParam("image") MultipartFile image) {
+        ResponseEntity<Map<String, Object>> fileValidationError = validateDetectImageFile(image);
+        if (fileValidationError != null) {
+            return fileValidationError;
         }
 
-        try (InputStream is = image.getInputStream()) {
-            BufferedImage bImage = ImageIO.read(is);
-            if (bImage == null) {
-                return ResponseEntity.badRequest().build();
+        if (!semanticSearchProvider.isModelLoaded()) {
+            return ResponseEntity.ok(List.of());
+        }
+
+        try {
+            Long businessId = tenantProvider.getBusinessId();
+            Optional<List<ProductEntity>> searchResult = semanticSearchProvider.search(image, businessId, 1);
+            if (searchResult.isEmpty()) {
+                return ResponseEntity.ok(List.of());
             }
 
-            Optional<float[]> embeddingOpt = clipInferenceService.generateEmbedding(bImage);
-            if (embeddingOpt.isEmpty()) {
-                return ResponseEntity.ok(java.util.List.of());
-            }
-
-            Long businessId = com.veltro.inventory.security.TenantContext.getBusinessId();
-            String embeddingString = formatEmbedding(embeddingOpt.get());
-            java.util.List<com.veltro.inventory.model.ProductEntity> result = productRepository.findSimilarProducts(embeddingString, businessId, 1);
-            
-            if (result.isEmpty()) {
+            List<ProductEntity> products = searchResult.get();
+            if (products.isEmpty()) {
                 return ResponseEntity.notFound().build();
             }
 
-            com.veltro.inventory.model.ProductEntity match = result.get(0);
-            
-            java.util.Map<String, Object> matchData = new java.util.HashMap<>();
+            ProductEntity match = products.getFirst();
+            Map<String, Object> matchData = new HashMap<>();
             matchData.put("id", match.getId());
             matchData.put("name", match.getName());
             matchData.put("salePrice", match.getSalePrice());
             matchData.put("barcode", match.getBarcode());
             matchData.put("sku", match.getSku());
 
-            return ResponseEntity.ok(java.util.List.of(Map.of(
-                "matches", java.util.List.of(matchData)
-            )));
-
+            return ResponseEntity.ok(List.of(Map.of("matches", List.of(matchData))));
         } catch (Exception e) {
             log.error("Detect search failed", e);
-            return ResponseEntity.ok(java.util.List.of());
+            return ResponseEntity.ok(List.of());
         }
     }
 
-    private String formatEmbedding(float[] embedding) {
-        StringBuilder sb = new StringBuilder("[");
-        for (int i = 0; i < embedding.length; i++) {
-            if (i > 0) sb.append(",");
-            sb.append(embedding[i]);
+    private ResponseEntity<Map<String, Object>> validateDetectImageFile(MultipartFile image) {
+        if (image == null || image.isEmpty() || image.getContentType() == null
+                || !ALLOWED_IMAGE_MIME_TYPES.contains(image.getContentType())) {
+            return ResponseEntity.badRequest().body(Map.of(
+                    "error", "Invalid file format",
+                    "status", 400
+            ));
         }
-        sb.append("]");
-        return sb.toString();
+
+        if (image.getSize() > MAX_IMAGE_BYTES) {
+            return ResponseEntity.badRequest().body(Map.of(
+                    "error", "File size exceeds 5MB limit",
+                    "status", 400
+            ));
+        }
+
+        return null;
     }
 }
-
